--- a/scss/application.scss
+++ b/scss/application.scss
@@ -56,7 +56,7 @@
 @import 'elements/pagination';
 @import 'application/elements/hanging_links';
 @import 'application/elements/clamp';
-@import 'application/elements/switches';
+@import 'elements/switches';
 @import 'application/elements/searchbar';
 @import 'application/elements/zero_state';
 @import 'elements/select';
