--- a/scss/elements/_tabs.scss
+++ b/scss/elements/_tabs.scss
@@ -123,6 +123,7 @@ ul.nav-tabs {
     text-align: right;
     margin-bottom: 10px;
     .switch {
+      position: relative;
       top: 8px;
       margin-right: 20px;
     }
