Added css classes for team stats - primarly used in the non-member team landing page

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -65,6 +65,7 @@
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
 @import 'application/elements/banner';
+@import 'application/elements/stats';
 
 // Views
 @import 'application/views/style_guide';
