--- a/scss/application/elements/_banner.scss
+++ b/scss/application/elements/_banner.scss
@@ -1,17 +1,4 @@
-// Action Bar
-//
-// Example:
-// <div id="styleGuide-actionBar" class="actionBar">
-//   <button class="button cta" data-toggle="modal" data-target="#modal_id">Move</button>
-//   <button class="button cta">Mark complete</button>
-//   <button class="button cta">Manage assignments</button>
-//   <button class="button cta-reverse">Delete</button>
-//   <button class="button inline">Deselect</button>
-// </div>
-// <button class="actionBar-open button cta" data-target="#styleGuide-actionBar">Open Action Bar</button>
-// 
-// Styleguide actionBar
-
+// css for team banners
 .banner-container {
   max-width: 940px;
   max-height: 235px;
