Adding new dropdown code

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -33,7 +33,7 @@
 @import 'elements/buttons';
 @import 'elements/tabs';
 @import 'application/global/navs';
-@import 'application/global/dropdowns';
+@import 'elements/dropdowns';
 @import 'elements/lists';
 
 @import 'elements/forms';
