--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -44,6 +44,7 @@
 @import "elements/language_switcher";
 @import 'elements/select';
 @import 'elements/pricing-table';
+@import 'elements/dropdowns';
 
 // Views
 @import "views/home";
