--- a/scss/layout/_page_header.scss
+++ b/scss/layout/_page_header.scss
@@ -5,7 +5,7 @@
   width: 100%;
   padding: 0;
   margin: 0;
-  z-index: 100;
+  z-index: $z-index-header;
   background-color: #fff;
   font-family: $headings-font-family;
   box-shadow: 0 0px 10px rgba(0,0,0,0.1);
