--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -287,6 +287,7 @@ textarea {
     font-weight: normal;
     cursor: pointer;
     display: flex;
+    flex-wrap: wrap;
   }
 }
 .radio + .radio, .checkbox + .checkbox {
