Moved css files for simple team dashboard

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -64,8 +64,9 @@
 @import 'elements/tables';
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
-@import 'application/elements/banner';
-@import 'application/elements/stats';
+@import 'elements/banner';
+@import 'elements/stats';
+@import 'elements/typography';
 
 // Views
 @import 'application/views/style_guide';
