--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -13,7 +13,7 @@
 //   - small: 14px (less prominent elemens like filter fields)
 //   - tiny: 13px (help text, and other fine print)
 //
-//  Use the .text-small or .text-tiny classes to change the font size
+//  Use the .text-small or .text-tiny classes to change the font size.  Line-height is always 20px.
 // 
 // <h3><em>Titling</em></h3>
 // <h1>Raleway</h1>
@@ -39,7 +39,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-sans-serif;
-  line-height: 1.4;
+  line-height: 20px;
   font-size: $font-size-normal;
   color: $text-color;
 }
