Added code for filter boxes

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -52,6 +52,7 @@
 @import 'application/elements/dialogs';
 @import 'application/elements/action_bar';
 @import 'elements/filters';
+@import 'elements/filter_box';
 @import 'application/elements/comments';
 @import 'elements/pagination';
 @import 'application/elements/hanging_links';
