--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -40,6 +40,16 @@ button {
 // 
 // Styleguide buttonOptions
 
+@mixin button-hover {
+  @include transition(0.4s);
+  &:hover, &.hover, &:focus {
+    color: #fff;
+    border-color: $lime;
+    background-color: $lime;
+    outline: none;
+  }
+}
+
 .button {
   display: inline-block;
   width: auto;
@@ -62,7 +72,6 @@ button {
   background-color: $teal;
   border: 1px solid $teal;
   @include no-underline;
-  @include transition(0.4s);
   &.block {
     display: block;
     width: 100%;
@@ -75,17 +84,6 @@ button {
   }
   &.tall {
     padding: 14px 30px;
-  }
-  &.disabled {
-    background-color: light($gray);
-    border-color: light($gray);
-    color: #393839;
-    cursor: default;
-    &:hover, &.hover, &:focus {
-      color: #393839;
-      background-color: light($gray);
-      border-color: light($gray);
-    }
   }
   &.cta {
     color: #fff;
@@ -108,6 +106,17 @@ button {
       color: $alternate;
     }
   }
+  &.disabled {
+    background-color: light($gray);
+    border-color: light($gray);
+    color: #393839;
+    cursor: default;
+    &:hover, &.hover, &:focus {
+      color: #393839;
+      background-color: light($gray);
+      border-color: light($gray);
+    }
+  }
 
   &.inline {
     display: inline-block;
@@ -123,19 +132,15 @@ button {
     }
   }
   &.borderless {
-    color: $teal;
+    color: $gray;
     background-color: transparent;
     border-color: transparent;
     &.inline {
       margin: 0 10px;
     }
   }
+  @include button-hover;
   &:hover, &.hover, &:focus {
-    color: #fff;
-    border-color: $lime;
-    background-color: $lime;
-    outline: none;
-
     &.lime {
       border-color: $teal;
       background-color: $teal;
