--- a/scss/base/_font_icons.scss
+++ b/scss/base/_font_icons.scss
@@ -172,6 +172,7 @@
 
 [class^="icon-"],
 [class*=" icon-"],
+.icon,
 i {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'amara' !important;
