Make dependent multiFields extend to the end of the page

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -428,6 +428,11 @@ input:checked + label .checkbox-icon {
       }
     }
 
+    .multiField-inputExtender {
+      grid-row: -2 / -1;
+      background: $snow;
+    }
+
     .multiField-rowEnd {
       display: none;
     }
