Updating table classes
- Renamed "table-striped" to "striped" to match our general naming scheme.
- Added a "lined" class
- Removed KSS documentation.  Let's switch this to a django template
- Started work on removing bootstrap dependencies:
  - Added a SCSS file that specifies what we're importing
  - Removed tables from that file

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -3,7 +3,7 @@
 // 3rd party
 @import "~chartist/dist/chartist";
 @import "~select2/dist/css/select2";
-@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "bootstrap";
 @import "fontawesome";
 
 @import 'functions';
