--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -3,7 +3,7 @@
 @import "variables";
 
 // 3rd party
-@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "bootstrap";
 @import "~select2/dist/css/select2";
 @import "fontawesome";
 
