--- a/scss/elements/_tables.scss
+++ b/scss/elements/_tables.scss
@@ -1,120 +1,3 @@
-// Tables
-//
-// Use tables for tabular data.  Take care because they can be hard to read on
-// mobile devices and other browsers with not a lot of width.  Use the
-// table-striped class to make alternate rows striped
-//
-// Example:
-// <table class="table">
-//   <thead>
-//     <tr>
-//       <th>Name</th>
-//       <th>Age</th>
-//       <th>Occupation</th>
-//     </tr>
-//   </thead>
-//   <tbody>
-//     <tr>
-//       <td>Bob</td>
-//       <td>20</td>
-//       <td>Cowboy</td>
-//     </tr>
-//     <tr>
-//       <td>Alice</td>
-//       <td>30</td>
-//       <td>Astronaut</td>
-//     </tr>
-//     <tr>
-//       <td>Eve</td>
-//       <td>40</td>
-//       <td>Spy</td>
-//     </tr>
-//   </tbody>
-// </table>
-//
-// Example:
-// <table class="table table-striped">
-//   <thead>
-//     <tr>
-//       <th>Name</th>
-//       <th>Age</th>
-//       <th>Occupation</th>
-//     </tr>
-//   </thead>
-//   <tbody>
-//     <tr>
-//       <td>Bob</td>
-//       <td>20</td>
-//       <td>Cowboy</td>
-//     </tr>
-//     <tr>
-//       <td>Alice</td>
-//       <td>30</td>
-//       <td>Astronaut</td>
-//     </tr>
-//     <tr>
-//       <td>Eve</td>
-//       <td>40</td>
-//       <td>Spy</td>
-//     </tr>
-//   </tbody>
-// </table>
-// 
-// Example:
-// <table class="table table-condensed">
-//   <tbody>
-//     <tr>
-//       <td>
-//         <a href="#">
-//           <span class="avatar" 
-//                 data-toggle="tooltip"
-//                 data-placement="top" 
-//                 title="Member Name">
-//                 <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/default-50.png">
-//           </span>
-//         </a>
-//       </td>
-//       <td>
-//         <strong>Gabriela Rocha</strong> started working as transcriber on <a href="#">Portuguese, Brazillian</a> for <a href="#"><strong>The Future of News? Virtual Reality</strong></a>
-//       </td>
-//       <td class="nowrap">1 hour ago</td>
-//     </tr>
-//     <tr>
-//       <td>
-//         <a href="#">
-//           <span class="avatar" 
-//                 data-toggle="tooltip"
-//                 data-placement="top" 
-//                 title="Member Name">
-//                 <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/default-50.png">
-//           </span>
-//         </a>
-//       </td>
-//       <td>
-//         <strong>Gabriela Rocha</strong> started working as transcriber on <a href="#">Portuguese, Brazillian</a> for <a href="#"><strong>The Future of News? Virtual Reality</strong></a>
-//       </td>
-//       <td>1 hour ago</td>
-//     </tr>
-//     <tr>
-//       <td>
-//         <a href="#">
-//           <span class="avatar" 
-//                 data-toggle="tooltip"
-//                 data-placement="top" 
-//                 title="Member Name">
-//                 <img src="https://s3.amazonaws.com/s3.www.universalsubtitles.org/gravatar/default-50.png">
-//           </span>
-//         </a>
-//       </td>
-//       <td>
-//         <strong>Gabriela Rocha</strong> started working as transcriber on <a href="#">Portuguese, Brazillian</a> for <a href="#"><strong>The Future of News? Virtual Reality</strong></a>
-//       </td>
-//       <td>1 hour ago</td>
-//     </tr>
-//   </tbody>
-// </table>
-//
-// Styleguide tables
 .table {
   width: 100%;
   max-width: 100%;
@@ -125,30 +8,36 @@
   thead {
 
   }
-  tbody {
-    tr {
-      td {
-        border: none;
-        vertical-align: top;
-        &.nowrap {
-          white-space: nowrap;
-        }
-      }
+  td, th {
+    padding: 8px;
+    vertical-align: top;
+    text-align: left;
+    &.nowrap {
+      white-space: nowrap;
     }
   }
-  &.table-striped {
-    tbody {
-      tr {
-        &:nth-of-type(odd) {
-          background: #f0f1f2;
-        }
-        &:nth-of-type(even) {
-          background: #fff;
-        }
-        td {
+  th {
+    border-bottom: 2px solid dark($snow);
+  }
+  &.striped {
+    tr:nth-of-type(odd) {
+      background: $white;
+    }
+    tr:nth-of-type(even) {
+      background: $snow;
+    }
+    td {
 
-        }
-      }
+    }
+  }
+  &.lined {
+    td {
+      border-bottom: 1px solid dark($snow);
+    }
+  }
+  &.align-middle {
+    td {
+      vertical-align: middle;
     }
   }
 }
@@ -229,26 +118,22 @@ table.historyTable {
 
 .assignmentHistoryTable {
   @extend .table;
-  @extend .table-striped;
+  @extend .table.striped;
   table-layout: fixed;
-  tbody {
-    tr {
-      td, th {
-        padding: 4px 8px;
-        line-height: 30px;
-        vertical-align: middle;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        &:first-child {
-          width: 50%;
-        }
-        &:last-child {
-          width: 120px;
-          text-align: right;
+  td, th {
+    padding: 4px 8px;
+    line-height: 30px;
+    vertical-align: middle;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    &:first-child {
+      width: 50%;
+    }
+    &:last-child {
+      width: 120px;
+      text-align: right;
 
-        }
-      }
     }
   }
 }
