Updating the bg-white class
Gave it charcoal text.  I think that looks better than gray.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,7 +19,7 @@ $colorscheme: (
   "charcoal": ($charcoal, $white),
   "gray": ($gray, $white),
   "snow": ($snow, $plum),
-  "white": ($white, $gray),
+  "white": ($white, $charcoal),
 );
 
 $body-bg:                #ffffff;
