Adding new modal code
- Added our own styles for modals
- Removed the bootstrap modal styles
- Moved _dialogs.scss out of the application directory
- Moved some styleguide code out of the SCSS and into templates

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -49,7 +49,7 @@
 @import 'elements/select_list';
 @import 'application/elements/subtitles';
 @import 'application/elements/subtitles_list';
-@import 'application/elements/dialogs';
+@import 'elements/dialogs';
 @import 'application/elements/action_bar';
 @import 'elements/filters';
 @import 'elements/filter_box';
