--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -34,6 +34,7 @@
 @import "elements/canvas";
 @import "elements/slider";
 @import "elements/blockquotes";
+@import "elements/dialogs";
 @import "elements/buttons";
 @import "elements/forms";
 @import "elements/video_card";
