Adding styles for a modal header
We use this a lot on our various modals, so let's actually make a style
for it

--- a/scss/elements/_dialogs.scss
+++ b/scss/elements/_dialogs.scss
@@ -51,9 +51,15 @@
   font-family: $font-family-sans-serif
 }
 
-.modal-subtitle {
+.modal-header {
   margin: 20px;
-  font-family: $font-family-sans-serif
+  font-family: $font-family-sans-serif;
+  font-weight: bold;
+}
+
+.modal-subheader {
+  margin: -20px 20px 20px 20px;
+  color: $gray;
 }
 
 .modal-footer {
