LanguageSwitcher/modal updates
- Made the modal dialogs get slightly wider on wider browsers.
- Fixed languageSwitcher styles
- Removed _language_selector_hack

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -58,7 +58,7 @@
 @import 'application/elements/hanging_links';
 @import 'application/elements/clamp';
 @import 'elements/switches';
-@import 'application/elements/searchbar';
+@import 'elements/searchbar';
 @import 'application/elements/zero_state';
 @import 'elements/select';
 @import "elements/alerts";
