--- a/scss/elements/_language_switcher.scss
+++ b/scss/elements/_language_switcher.scss
@@ -1,6 +1,8 @@
 // TODO move code from _language_selector_hack.scss to here
 .languageSwitcher_list {
   margin-bottom: 20px;
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 @include respond-to(tablet) {
