--- a/scss/elements/_content_container.scss
+++ b/scss/elements/_content_container.scss
@@ -16,34 +16,6 @@
 
   }
 
-  .addButton {
-    flex-direction: row-reverse;
-    display: inline-block;
-    background-color: $teal;
-    text-align: center;
-    align-items: center;
-    float: right;
-    width: 40px;
-    height: 39px;
-    transition: width 0.5s;
-    -webkit-transition: width 0.5s;
-    overflow: hidden;
-    white-space: nowrap;
-
-    .fa-plus {
-      color: #ffffff;
-    }
-
-    .p {
-      color: #ffffff;
-    }
-
-  }
-
-  .addButton:hover {
-      width: 150px;
-  }
-
   .title {
       font-size: 20px;
       color: #ffffff;
@@ -51,3 +23,22 @@
   }
     
 }
+
+.contentHeader-addButton {
+  display: flex;
+  align-items: center;
+  @extend .bg-teal;
+  text-align: left;
+  padding: 0 13px;
+  height: 39px;
+  @include transition(0.5s);
+  overflow: hidden;
+  white-space: nowrap;
+
+}
+
+.contentHeader-addButtonText {
+  margin-left: 4px;
+  display: none;
+}
+
