Started listview work

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -35,6 +35,7 @@
 @import 'application/global/navs';
 @import 'elements/dropdowns';
 @import 'elements/lists';
+@import 'elements/list_view';
 
 @import 'elements/forms';
 @import 'application/global/progressbars';
