Initial implementatio of workflow diagram element - also added new icon size .icon-sm-to-md

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -64,6 +64,7 @@
 @import 'elements/tables';
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
+@import 'application/elements/workflow_diagram';
 
 // Views
 @import 'application/views/style_guide';
