--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -17,6 +17,10 @@
     border-top: 1px solid light($gray);
     margin-top: -1px; // Avoid making the cell move downward when it expands
   }
+  &.selected {
+    padding-left: 4px;
+    border-left: 6px solid $lime;
+  }
 }
 
 .listView-header {
@@ -66,7 +70,7 @@
     color: $lime;
   }
 
-  &.visible {
+  &.hover, &.selected {
     visibility: visible;
   }
 }
