--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -3,9 +3,6 @@ section {
   padding: 50px 0;
   margin: 0 auto;
   clear: both;
-  &:focus {
-    outline: none;
-  }
 
   @include respond-to(tablet) {
     max-width: $container-sm;
@@ -22,9 +19,8 @@ a {
   color: $teal;
   font-weight: 600;
   text-decoration: underline;
-  &:hover, &:focus {
+  &:hover {
     color: $lime;
-    outline: none;
     cursor: pointer;
   }
   &.no-underline {
