Style updates for the video URL list
- Updated listView code to calculate columns correctly with minmax()
- Added badges SCSS
- Added text-overflow: ellipsis to listview columns

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -66,6 +66,7 @@
 @import 'elements/tables';
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
+@import 'elements/badges';
 
 // Views
 @import 'application/views/style_guide';
