Updating video page url tab code
- Made the context menus work again.
- Updated the dropdown code a bit to support this

--- a/scss/elements/_dropdowns.scss
+++ b/scss/elements/_dropdowns.scss
@@ -18,6 +18,7 @@
 .dropdownMenu-link {
   display: flex;
   align-items: center;
+  width: 100%;
 
   @include no-underline;
   color: inherit;
@@ -43,6 +44,7 @@
 
 .dropdownMenu-text {
   flex-grow: 1;
+  text-align: left;
 
   padding-right: 48px;
 }
