--- a/scss/elements/_dialogs.scss
+++ b/scss/elements/_dialogs.scss
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: $z-index-modal;
   display: none;
-  top: 97px;
+  top: 5%;
   left: 10px;
   right: 10px;
   background: $white;
@@ -34,7 +34,7 @@
 
 .modal-content {
   padding: 20px;
-  max-height: 600px;
+  max-height: 60vh;
   overflow-y: auto;
 }
 
