--- a/scss/elements/_content_container.scss
+++ b/scss/elements/_content_container.scss
@@ -1,28 +1,39 @@
 .contentHeader {
   background-color: $plum;
+  display: flex;
   align-items: center;
-  height: 56px;
   padding: 8px;
-
-  .form-group {
-    margin: 0;
-  }
-
-  .search {
-      opacity: 0.37;
-      padding-right: 8px;
-      flex-direction: row-reverse;
-      flex-grow: 4;
-
-  }
-
-  .title {
-      font-size: 20px;
-      color: #ffffff;
-      flex-direction: row;
-  }
-    
 }
+
+.contentHeader-title {
+  @include font-h3;
+  color: $white;
+  padding-left: 8px;
+  padding-right: 40px;
+}
+
+.contentHeader-search {
+  position: relative;
+  padding-right: 8px;
+  flex-grow: 1;
+  &:after {
+    @extend .searchbar:after;
+    color: $plum;
+  }
+}
+
+.contentHeader-searchBar {
+  border: none;
+  background: mix($plum, $white, 63%);
+  line-height: 24px;
+  padding-right: 32px;
+  color: $white;
+
+  &::placeholder {
+    color: $plum;
+  }
+}
+
 
 .contentHeader-addButton {
   display: flex;
