Initial implementation of futureui workflow settings page

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -67,6 +67,7 @@
 @import 'elements/video-subtitles-list';
 @import 'elements/pricing-table';
 @import 'application/elements/workflow_diagram';
+@import 'application/elements/workflow_settings';
 
 // Views
 @import 'application/views/style_guide';
