Adding some code for the members directory
- Separated the actionBar JS into its own modlue
- Added the ability to call ajax.update(), but not change the URL
- Added code to handle opening forms in listView
- Added some CSS for the members directory

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -10,6 +10,12 @@
   &.videoUrls {
     grid-template-columns: [secondary-row-start] 1fr minmax(auto, auto) auto [secondary-row-end];
   }
+  &.memberDirectory {
+    grid-template-columns: [secondary-row-start] auto auto auto auto [secondary-row-end];
+  }
+  &.memberDirectory.admin {
+    grid-template-columns: auto [secondary-row-start] auto auto auto auto auto [secondary-row-end];
+  }
   margin: 0 -10px;
 }
 
@@ -36,6 +42,7 @@
 .listView-secondary {
   color: $gray;
   display: none;
+  margin-top: 4px;
 
   &.visible {
     display: block;
