--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -16,7 +16,7 @@
   &.memberDirectory.admin {
     grid-template-columns: auto [secondary-row-start] auto auto auto auto auto [secondary-row-end];
   }
-  margin: 0 -10px;
+  margin: 0 -10px 40px;
 }
 
 .listView > * {
