Added workflow diagram to workflow settings page

--- a/scss/application/elements/_workflow_settings.scss
+++ b/scss/application/elements/_workflow_settings.scss
@@ -6,6 +6,10 @@
   display: none;
 }
 
+.defaultHidden {
+  display: none;
+}
+
 .assignmentDeadlineTotalContainer {
   padding-top: 0px;
   display: flex;
