Moving the text utilities to typography
This way we can use it in the application styles

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -132,8 +132,17 @@ em {
 }
 
 
+// Text Utilities
 
+.text-nocase { text-transform: none !important; }
+.text-capitalize { text-transform: capitalize !important; }
+.text-lowercase { text-transform: lowercase !important; }
+.text-uppercase { text-transform: uppercase !important; }
 
+.italic {
+  font-style: italic;
+}
+t
 // Media Queries
 @media(max-width: $screen-md-max) {
 
