Make the context menu icon bigger

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -69,7 +69,7 @@
 .listView-action {
   visibility: hidden;
   color: $gray;
-  font-size: $font-size-tiny;
+  font-size: $font-size-normal;
   margin: 0 4px;
 
   &:hover {
