--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -80,3 +80,44 @@
     visibility: visible;
   }
 }
+
+.listView-projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: $font-size-small;
+
+  li {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    padding: 8px;
+    color: dark($gray);
+    &:hover {
+      background-color: $snow;
+      .context-menu {
+        display: block;
+      }
+    }
+
+    p {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin-right: 5px;
+      height: 20px;
+    }
+
+    .name {
+      color: $charcoal;
+      flex-basis: 20%;
+    }
+
+    .description {
+      flex-basis: 80%;
+    }
+
+  }
+}
