Added styles for simple dashboard history elements

--- a/scss/elements/_tables.scss
+++ b/scss/elements/_tables.scss
@@ -137,3 +137,16 @@ table.historyTable {
     }
   }
 }
+
+.simpleDashboardHistoryLanguageLink {
+  text-align: center !important;
+}
+
+.simpleDashboardHistoryDuration {
+  text-align: right !important;
+  padding-right: 100px !important;
+}
+
+.simpleDashboardHistoryDate {
+  width: 200px !important;
+}
