--- a/scss/elements/_tables.scss
+++ b/scss/elements/_tables.scss
@@ -142,6 +142,7 @@ table.historyTable {
   text-align: center !important;
 }
 
+// it's okay to set a hard padding of 100px since this element is only present in large screens
 .simpleDashboardHistoryDuration {
   text-align: right !important;
   padding-right: 100px !important;
