Changed simple dashboard history duration padding to percentage

--- a/scss/elements/_tables.scss
+++ b/scss/elements/_tables.scss
@@ -145,7 +145,7 @@ table.historyTable {
 // it's okay to set a hard padding of 100px since this element is only present in large screens
 .simpleDashboardHistoryDuration {
   text-align: right !important;
-  padding-right: 100px !important;
+  padding-right: 5% !important;
 }
 
 .simpleDashboardHistoryDate {
