--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -1,6 +1,8 @@
 .listView {
   display: grid;
 
+  margin: 0 0 40px;
+
   // Below here are column layouts for specific listViews.  If you have a
   // secondary row, make sure you create named lines for it.  It should take up
   // the entire row, except for the checkbox column (if present).
@@ -16,7 +18,9 @@
   &.memberDirectory.admin {
     grid-template-columns: auto [secondary-row-start] auto auto auto auto auto [secondary-row-end];
   }
-  margin: 0 -10px 40px;
+  &.projects {
+    grid-template-columns: [secondary-row-start] auto auto auto [secondary-row-end];
+  }
 }
 
 .listView > * {
@@ -111,46 +115,5 @@
 
   &.hover, &.selected {
     visibility: visible;
-  }
-}
-
-.listView-projects {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: $font-size-small;
-
-  li {
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    width: 100%;
-    padding: 8px;
-    color: dark($gray);
-    &:hover {
-      background-color: $snow;
-      .context-menu {
-        display: block;
-      }
-    }
-
-    p {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      margin-right: 5px;
-      height: 20px;
-    }
-
-    .name {
-      color: $charcoal;
-      flex-basis: 20%;
-    }
-
-    .description {
-      flex-basis: 80%;
-    }
-
   }
 }
