--- a/scss/elements/_lists.scss
+++ b/scss/elements/_lists.scss
@@ -1,16 +1,6 @@
 // Lists
 //
 // Example:
-// <dl>
-//   <dt>First Item</dt>
-//   <dd>Here is a short description of this item</dd>
-//   <dt>Second Item</dt>
-//   <dd>Here is a short description of this item</dd>
-//   <dt>Third Item</dt>
-//   <dd>Here is a short description of this item</dd>
-// </dl>
-// 
-// Example:
 // <ul>
 //   <li>List item One</li>
 //   <li>List item Two</li>
@@ -34,60 +24,29 @@
 // Styleguide lists
 dl {
   margin: 0;
-  &.inline {
-    dt,dd{display:inline; font-weight: 100;}
-    dd {margin-right: 10px;}
+}
+
+dt {
+  font-weight: bold;
+}
+
+dd {
+  font-weight: normal;
+  padding-bottom: 8px;
+}
+
+@include respond-to(tablet, 0) {
+  dt.inline {
+    display: inline-block;
+    padding-right: 8px;
+    padding-bottom: 8px;
   }
-  &.inline-description {
-    display: flex;
-    flex-wrap: wrap;
+  dd.inline {
+    display: inline;
 
-    dt,
-    dd {
-      display: inline-block;
-      margin: 5px 0;
-      width: 100%;
-    }
-
-    dd {
-      &.constrain {
-        max-height: 95px;
-        overflow: hidden;
-        position: relative;
-        margin-bottom: 20px;
-        &:after {
-          content: 'more >>';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          height: 40px;
-          width:100%;
-          background: #fff;
-          background: linear-gradient(transparent, rgba(255,255,255,.5), #fff, #fff);
-          padding-top: 25px;
-          font-weight: bold;
-          cursor: pointer;
-        }
-        &.opened {
-          max-height: none;
-          &:after {
-            display: none;
-            content: '<< less';
-          }
-        }
-      }
-      img {
-        margin-right: 10px;
-      }
-    }
-
-    @include respond-to(tablet, 0) {
-      dt {
-        width: 150px;
-      }
-      dd {
-        width: calc(100% - 150px);
-      }
+    &:after {
+      content: "\A";
+      white-space: pre;
     }
   }
 }
