Adding CSS for the new member profile

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -81,6 +81,7 @@
 @import 'application/views/video_subtitles';
 @import 'application/views/messaging_center';
 @import 'application/views/member_directory';
+@import 'application/views/member_profile';
 @import 'application/views/activity_page';
 @import 'views/videos-create';
 @import 'views/team-members';
