Adding icon for subtitling assignments

--- a/scss/base/_font_icons.scss
+++ b/scss/base/_font_icons.scss
@@ -310,6 +310,10 @@ i {
   @extend .icon-transcribe:before;
 }
 
+.icon-subtitles:before {
+  @extend .icon-transcribe:before;
+}
+
 // sizes
 .icon-sm {
   font-size: 25px;
