Restored list view style guide entry

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -210,13 +210,6 @@
     ));
   }
 
-  &.styleguide2Example {
-    @include listView((
-      phone: (".styleguide2Example-title", ".styleguide2Example-language"),
-      tablet: (".listView-checkbox", ".listView-actions"),
-    ));
-  }
-
   &.memberDirectory {
     @include listView((
       phone: (".memberDirectory-name", ".memberDirectory-role"),
@@ -252,7 +245,7 @@
     @include listView((
       phone: (".syncHistoryList-title"),
       tablet: (".syncHistoryList-language"),
-      laptop: (".syncHistoryList-channel", ".syncHistoryList-platform", "listView-actions"),
+      laptop: (".syncHistoryList-channel", ".syncHistoryList-platform", ".listView-actions"),
     ));
   }
 
